src/rmt_coptergym/c_sim/RMT_FDM_Header/RMT_FDM_DLL_FrameWork_FCS_RT_types.h

typedef struct {
  boolean_T flg_Reset;
  boolean_T flg_Run;
  boolean_T flg_Run_p;
  boolean_T flg_Run_q;
  boolean_T flg_Run_r;
  boolean_T flg_Run_Phi;
  boolean_T flg_Run_Theta;
  boolean_T flg_Run_Psi;
  boolean_T flg_Run_vel_x;
  boolean_T flg_Run_vel_y;
  boolean_T flg_Run_vel_z;
  boolean_T flg_Run_pos_x;
  boolean_T flg_Run_pos_y;
  boolean_T flg_Run_pos_z;
  boolean_T flg_Propulsion_On;
  boolean_T flg_Aerodynamics_On;
  boolean_T flg_Weight_Balance_On;
  boolean_T flg_Ground_Contacts_On;
  boolean_T flg_Enable_Sensor_Errors;
  boolean_T flg_Enable_Controller;
} Simulation_Control_Bus;
typedef struct {
  real_T w_x_K_IB_B_radDs;
  real_T w_y_K_IB_B_radDs;
  real_T w_z_K_IB_B_radDs;
} rot_K_IB_B_radDs_Bus;
typedef struct {
  real_T Phi_rad;
  real_T Theta_rad;
  real_T Psi_rad;
} att_euler_rad_Bus;
typedef struct {
  real_T u_K_R_E_B_mDs;
  real_T v_K_R_E_B_mDs;
  real_T w_K_R_E_B_mDs;
} vel_K_R_E_B_mDs_Bus;
typedef struct {
  real_T x_R_O_m;
  real_T y_R_O_m;
  real_T z_R_O_m;
} pos_R_O_m_Bus;
typedef struct {
  real_T lambda_R_WGS84_rad;
  real_T mue_R_WGS84_rad;
  real_T h_R_WGS84_m;
} pos_R_WGS84_Bus;
typedef struct {
  real_T u_0_radDs[8];
} Actuator_States_Init_Bus;
typedef struct {
  rot_K_IB_B_radDs_Bus rot_K_IB_B_radDs;
  att_euler_rad_Bus att_euler_rad;
  vel_K_R_E_B_mDs_Bus vel_K_R_E_B_mDs;
  pos_R_O_m_Bus pos_R_O_m;
  pos_R_WGS84_Bus pos_R_WGS84;
  Actuator_States_Init_Bus actuator;
} States_Init_Bus;
typedef struct {
  real_T w_x_W_OW_B_radDs;
  real_T w_y_W_OW_B_radDs;
  real_T w_z_W_OW_B_radDs;
} rot_W_OW_B_radDs_Bus;
typedef struct {
  real_T u_W_R_E_O_mDs;
  real_T v_W_R_E_O_mDs;
  real_T w_W_R_E_O_mDs;
} vel_W_R_E_O_mDs_Bus;
typedef struct {
  real_T Static_Temperature_ATM_K;
  real_T Speed_of_Sound_mDs;
  real_T Static_Pressure_ATM_NDm2;
  real_T rho_kgDm3;
} Atmosphere_Bus;
typedef struct {
  real_T w1_cmd_radDs;
  real_T w2_cmd_radDs;
  real_T w3_cmd_radDs;
  real_T w4_cmd_radDs;
  real_T w5_cmd_radDs;
  real_T w6_cmd_radDs;
  real_T w7_cmd_radDs;
  real_T w8_cmd_radDs;
} Controller_Commands_Bus;
typedef struct {
  real_T u_dot_K_R_EB_B_mDs2;
  real_T v_dot_K_R_EB_B_mDs2;
  real_T w_dot_K_R_EB_B_mDs2;
} vel_dot_K_R_EB_B_mDs2_Bus;
typedef struct {
  real_T w_x_dot_K_IB_B_B_radDs2;
  real_T w_y_dot_K_IB_B_B_radDs2;
  real_T w_z_dot_K_IB_B_B_radDs2;
} rot_dot_K_IB_B_B_radDs2_Bus;
typedef struct {
  real_T Phi_dot_radDs;
  real_T Theta_dot_radDs;
  real_T Psi_dot_radDs;
} att_dot_euler_radDs_Bus;
typedef struct {
  real_T x_dot_R_E_O_mDs;
  real_T y_dot_R_E_O_mDs;
  real_T z_dot_R_E_O_mDs;
} pos_dot_R_E_O_mDs_Bus;
typedef struct {
  vel_dot_K_R_EB_B_mDs2_Bus vel_dot_K_R_EB_B_mDs2;
  rot_dot_K_IB_B_B_radDs2_Bus rot_dot_K_IB_B_B_radDs2;
  att_dot_euler_radDs_Bus att_dot_euler_radDs;
  pos_dot_R_E_O_mDs_Bus pos_dot_R_E_O_mDs;
} States_Dot_Bus;
typedef struct {
  real_T X_T_R_B_N;
  real_T Y_T_R_B_N;
  real_T Z_P_R_B_N;
} for_T_R_B_N_Bus;
typedef struct {
  real_T L_T_R_B_Nm;
  real_T M_T_R_B_Nm;
  real_T N_T_R_B_Nm;
} mom_T_R_B_Nm_Bus;
typedef struct {
  for_T_R_B_N_Bus for_T_R_B_N;
  mom_T_R_B_Nm_Bus mom_T_R_B_Nm;
} for_mom_T_R_B_Bus;
typedef struct {
  real_T X_P_R_B_N;
  real_T Y_P_R_B_N;
  real_T Z_P_R_B_N;
} for_P_R_B_N_Bus;
typedef struct {
  real_T L_P_R_B_Nm;
  real_T M_P_R_B_Nm;
  real_T N_P_R_B_Nm;
} mom_P_R_B_Nm_Bus;
typedef struct {
  for_P_R_B_N_Bus for_P_R_B_N;
  mom_P_R_B_Nm_Bus mom_P_R_B_Nm;
} for_mom_P_R_B_Bus;
typedef struct {
  for_mom_P_R_B_Bus for_mom_P_R_B;
  real_T Propulsion_Out;
} Propulsion_Data_Out_Bus;
typedef struct {
  real_T X_A_R_B_N;
  real_T Y_A_R_B_N;
  real_T Z_A_R_B_N;
} for_A_R_B_N_Bus;
typedef struct {
  real_T L_A_R_B_Nm;
  real_T M_A_R_B_Nm;
  real_T N_A_R_B_Nm;
} mom_A_R_B_Nm_Bus;
typedef struct {
  for_A_R_B_N_Bus for_A_R_B_N;
  mom_A_R_B_Nm_Bus mom_A_R_B_Nm;
} for_mom_A_R_B_Bus;
typedef struct {
  real_T X_LDG_R_B_N;
  real_T Y_LDG_R_B_N;
  real_T Z_LDG_R_B_N;
} for_LDG_R_B_N_Bus;
typedef struct {
  real_T L_LDG_R_B_Nm;
  real_T M_LDG_R_B_Nm;
  real_T N_LDG_R_B_Nm;
} mom_LDG_R_B_Nm_Bus;
typedef struct {
  for_LDG_R_B_N_Bus for_LDG_R_B_N;
  mom_LDG_R_B_Nm_Bus mom_LDG_R_B_Nm;
} for_mom_LDG_R_B_Bus;
typedef struct {
  real_T X_G_R_B_N;
  real_T Y_G_R_B_N;
  real_T Z_G_R_B_N;
} for_G_R_B_N_Bus;
typedef struct {
  real_T L_G_R_B_Nm;
  real_T M_G_R_B_Nm;
  real_T N_G_R_B_Nm;
} mom_G_R_B_Nm_Bus;
typedef struct {
  for_G_R_B_N_Bus for_G_R_B_N;
  mom_G_R_B_Nm_Bus mom_G_R_B_Nm;
} for_mom_G_R_B_Bus;
typedef struct {
  real_T pos_RG_B_m[3];
  real_T m_kg;
  real_T I_R_BB_kgm2[9];
} Weight_Balance_Bus;
typedef struct {
  for_mom_T_R_B_Bus for_mom_T_R_B;
  Propulsion_Data_Out_Bus Propulsion_Data_Out;
  for_mom_A_R_B_Bus for_mom_A_R_B;
  for_mom_LDG_R_B_Bus for_mom_LDG_R_B;
  for_mom_G_R_B_Bus for_mom_G_R_B;
  Weight_Balance_Bus Weight_Balance;
} Airframe_Outputs_Bus;
typedef struct {
  real_T acc_G_R_OO_O_mDs2[3];
} Gravitation_Bus;
typedef struct {
  Atmosphere_Bus Atmosphere;
  Gravitation_Bus Gravitation;
} Environment_Bus;
typedef struct {
  real_T w_x_K_EB_B_radDs;
  real_T w_y_K_EB_B_radDs;
  real_T w_z_K_EB_B_radDs;
} rot_K_EB_B_radDs_Bus;
typedef struct {
  real_T w_x_K_OB_B_radDs;
  real_T w_y_K_OB_B_radDs;
  real_T w_z_K_OB_B_radDs;
} rot_K_OB_B_radDs_Bus;
typedef struct {
  real_T M_BO[9];
  real_T M_OB[9];
  real_T M_NO[9];
  real_T M_ON[9];
} Kin_Trafo_Matrices_Bus;
typedef struct {
  rot_K_IB_B_radDs_Bus rot_K_IB_B_radDs;
  vel_K_R_E_B_mDs_Bus vel_K_R_E_B_mDs;
  rot_K_EB_B_radDs_Bus rot_K_EB_B_radDs;
  rot_K_OB_B_radDs_Bus rot_K_OB_B_radDs;
  Kin_Trafo_Matrices_Bus Kin_Trafo_Matrices;
} Kinematic_Data_Bus;
typedef struct {
  real_T u_A_R_E_0_mDs;
  real_T v_A_R_E_0_mDs;
  real_T w_A_R_E_0_mDs;
} vel_A_R_E_O_mDs_Bus;
typedef struct {
  real_T u_A_R_E_B_mDs;
  real_T v_A_R_E_B_mDs;
  real_T w_A_R_E_B_mDs;
} vel_A_R_E_B_mDs_Bus;
typedef struct {
  vel_A_R_E_O_mDs_Bus vel_A_R_E_0_mDs;
  vel_A_R_E_B_mDs_Bus vel_A_R_E_B_mDs;
} Aero_Velocities_Bus;
typedef struct {
  real_T VEL_A_R_abs_mDs;
  real_T alpha_A_R_rad;
  real_T beta_A_R_rad;
} Translation_A_R_Bus;