src/rmt_coptergym/c_sim/RMT_structs.py

import ctypes

############################################################
# Standard-Typdefinitionen (wie von Ihnen bereitgestellt)
############################################################

# Logical type definitions
false = 0
true = 1

# Fixed width word size data types
int8_T = ctypes.c_int8
uint8_T = ctypes.c_uint8
int16_T = ctypes.c_int16
uint16_T = ctypes.c_uint16
int32_T = ctypes.c_int32
uint32_T = ctypes.c_uint32
int64_T = ctypes.c_int64
uint64_T = ctypes.c_uint64
real32_T = ctypes.c_float
real64_T = ctypes.c_double

# Type for ZCSigState (aus zero_crossing_types.h, typischerweise ein int/enum)
ZCSigState = ctypes.c_int

# Generic type definitions
real_T = real64_T
time_T = real64_T
boolean_T = ctypes.c_bool  # Using ctypes.c_bool for direct mapping
int_T = ctypes.c_int
uint_T = ctypes.c_uint
ulong_T = ctypes.c_ulong
ulonglong_T = ctypes.c_ulonglong
char_T = ctypes.c_char
uchar_T = ctypes.c_ubyte
byte_T = ctypes.c_char

# Complex number type definitions
class creal32_T(ctypes.Structure):
    _fields_ = [("re", real32_T), ("im", real32_T)]

class creal64_T(ctypes.Structure):
    _fields_ = [("re", real64_T), ("im", real64_T)]

class creal_T(ctypes.Structure):
    _fields_ = [("re", real_T), ("im", real_T)]

class cint8_T(ctypes.Structure):
    _fields_ = [("re", int8_T), ("im", int8_T)]

class cuint8_T(ctypes.Structure):
    _fields_ = [("re", uint8_T), ("im", uint8_T)]

class cint16_T(ctypes.Structure):
    _fields_ = [("re", int16_T), ("im", int16_T)]

class cuint16_T(ctypes.Structure):
    _fields_ = [("re", uint16_T), ("im", uint16_T)]

class cint32_T(ctypes.Structure):
    _fields_ = [("re", int32_T), ("im", int32_T)]

class cuint32_T(ctypes.Structure):
    _fields_ = [("re", uint32_T), ("im", uint32_T)]

class cint64_T(ctypes.Structure):
    _fields_ = [("re", int64_T), ("im", int64_T)]

class cuint64_T(ctypes.Structure):
    _fields_ = [("re", uint64_T), ("im", uint64_T)]

# Pointer type
pointer_T = ctypes.c_void_p

############################################################
# Strukturen aus RMT_FDM_RT_types.h und verwandten Dateien
############################################################

# Basistypen und kleine Bus-Strukturen

class pos_R_local_meas_Bus(ctypes.Structure):
    _fields_ = [
        ("x_R_O_meas_m", real_T),
        ("y_R_O_meas_m", real_T),
        ("z_R_O_meas_m", real_T)
    ]

class Simulation_Control_Bus(ctypes.Structure):
    _fields_ = [
        ("flg_Reset", boolean_T),
        ("flg_Run", boolean_T),
        ("flg_Run_p", boolean_T),
        ("flg_Run_q", boolean_T),
        ("flg_Run_r", boolean_T),
        ("flg_Run_Phi", boolean_T),
        ("flg_Run_Theta", boolean_T),
        ("flg_Run_Psi", boolean_T),
        ("flg_Run_vel_x", boolean_T),
        ("flg_Run_vel_y", boolean_T),
        ("flg_Run_vel_z", boolean_T),
        ("flg_Run_pos_x", boolean_T),
        ("flg_Run_pos_y", boolean_T),
        ("flg_Run_pos_z", boolean_T),
        ("flg_Propulsion_On", boolean_T),
        ("flg_Aerodynamics_On", boolean_T),
        ("flg_Weight_Balance_On", boolean_T),
        ("flg_Ground_Contacts_On", boolean_T),
        ("flg_Enable_Sensor_Errors", boolean_T),
        ("flg_Enable_Controller", boolean_T)
    ]

class rot_W_OW_B_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_W_OW_B_radDs", real_T),
        ("w_y_W_OW_B_radDs", real_T),
        ("w_z_W_OW_B_radDs", real_T)
    ]

class vel_W_R_E_O_mDs_Bus(ctypes.Structure):
    _fields_ = [
        ("u_W_R_E_O_mDs", real_T),
        ("v_W_R_E_O_mDs", real_T),
        ("w_W_R_E_O_mDs", real_T)
    ]

class Atmosphere_Bus(ctypes.Structure):
    _fields_ = [
        ("Static_Temperature_ATM_K", real_T),
        ("Speed_of_Sound_mDs", real_T),
        ("Static_Pressure_ATM_NDm2", real_T),
        ("rho_kgDm3", real_T)
    ]

class rot_K_IB_B_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_K_IB_B_radDs", real_T),
        ("w_y_K_IB_B_radDs", real_T),
        ("w_z_K_IB_B_radDs", real_T)
    ]

class att_euler_rad_Bus(ctypes.Structure):
    _fields_ = [
        ("Phi_rad", real_T),
        ("Theta_rad", real_T),
        ("Psi_rad", real_T)
    ]

class vel_K_R_E_B_mDs_Bus(ctypes.Structure):
    _fields_ = [
        ("u_K_R_E_B_mDs", real_T),
        ("v_K_R_E_B_mDs", real_T),
        ("w_K_R_E_B_mDs", real_T)
    ]

class pos_R_O_m_Bus(ctypes.Structure):
    _fields_ = [
        ("x_R_O_m", real_T),
        ("y_R_O_m", real_T),
        ("z_R_O_m", real_T)
    ]

class pos_R_WGS84_Bus(ctypes.Structure):
    _fields_ = [
        ("lambda_R_WGS84_rad", real_T),
        ("mue_R_WGS84_rad", real_T),
        ("h_R_WGS84_m", real_T)
    ]

class Actuator_States_Init_Bus(ctypes.Structure):
    _fields_ = [
        ("u_0_radDs", real_T * 8)
    ]

class States_Init_Bus(ctypes.Structure):
    _fields_ = [
        ("rot_K_IB_B_radDs", rot_K_IB_B_radDs_Bus),
        ("att_euler_rad", att_euler_rad_Bus),
        ("vel_K_R_E_B_mDs", vel_K_R_E_B_mDs_Bus),
        ("pos_R_O_m", pos_R_O_m_Bus),
        ("pos_R_WGS84", pos_R_WGS84_Bus),
        ("actuator", Actuator_States_Init_Bus)
    ]

class Controller_Commands_Bus(ctypes.Structure):
    _fields_ = [
        ("w1_cmd_radDs", real_T),
        ("w2_cmd_radDs", real_T),
        ("w3_cmd_radDs", real_T),
        ("w4_cmd_radDs", real_T),
        ("w5_cmd_radDs", real_T),
        ("w6_cmd_radDs", real_T),
        ("w7_cmd_radDs", real_T),
        ("w8_cmd_radDs", real_T)
    ]

# Fahrzeug- und Umgebungsbusse

class vel_dot_K_R_EB_B_mDs2_Bus(ctypes.Structure):
    _fields_ = [
        ("u_dot_K_R_EB_B_mDs2", real_T),
        ("v_dot_K_R_EB_B_mDs2", real_T),
        ("w_dot_K_R_EB_B_mDs2", real_T)
    ]

class rot_dot_K_IB_B_B_radDs2_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_dot_K_IB_B_B_radDs2", real_T),
        ("w_y_dot_K_IB_B_B_radDs2", real_T),
        ("w_z_dot_K_IB_B_B_radDs2", real_T)
    ]

class att_dot_euler_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("Phi_dot_radDs", real_T),
        ("Theta_dot_radDs", real_T),
        ("Psi_dot_radDs", real_T)
    ]

class pos_dot_R_E_O_mDs_Bus(ctypes.Structure):
    _fields_ = [
        ("x_dot_R_E_O_mDs", real_T),
        ("y_dot_R_E_O_mDs", real_T),
        ("z_dot_R_E_O_mDs", real_T)
    ]

class States_Dot_Bus(ctypes.Structure):
    _fields_ = [
        ("vel_dot_K_R_EB_B_mDs2", vel_dot_K_R_EB_B_mDs2_Bus),
        ("rot_dot_K_IB_B_B_radDs2", rot_dot_K_IB_B_B_radDs2_Bus),
        ("att_dot_euler_radDs", att_dot_euler_radDs_Bus),
        ("pos_dot_R_E_O_mDs", pos_dot_R_E_O_mDs_Bus)
    ]

class for_T_R_B_N_Bus(ctypes.Structure):
    _fields_ = [
        ("X_T_R_B_N", real_T),
        ("Y_T_R_B_N", real_T),
        ("Z_P_R_B_N", real_T)
    ]

class mom_T_R_B_Nm_Bus(ctypes.Structure):
    _fields_ = [
        ("L_T_R_B_Nm", real_T),
        ("M_T_R_B_Nm", real_T),
        ("N_T_R_B_Nm", real_T)
    ]

class for_mom_T_R_B_Bus(ctypes.Structure):
    _fields_ = [
        ("for_T_R_B_N", for_T_R_B_N_Bus),
        ("mom_T_R_B_Nm", mom_T_R_B_Nm_Bus)
    ]

class for_P_R_B_N_Bus(ctypes.Structure):
    _fields_ = [
        ("X_P_R_B_N", real_T),
        ("Y_P_R_B_N", real_T),
        ("Z_P_R_B_N", real_T)
    ]

class mom_P_R_B_Nm_Bus(ctypes.Structure):
    _fields_ = [
        ("L_P_R_B_Nm", real_T),
        ("M_P_R_B_Nm", real_T),
        ("N_P_R_B_Nm", real_T)
    ]

class for_mom_P_R_B_Bus(ctypes.Structure):
    _fields_ = [
        ("for_P_R_B_N", for_P_R_B_N_Bus),
        ("mom_P_R_B_Nm", mom_P_R_B_Nm_Bus)
    ]

class Propulsion_Data_Out_Bus(ctypes.Structure):
    _fields_ = [
        ("for_mom_P_R_B", for_mom_P_R_B_Bus),
        ("Propulsion_Out", real_T)
    ]

class for_A_R_B_N_Bus(ctypes.Structure):
    _fields_ = [
        ("X_A_R_B_N", real_T),
        ("Y_A_R_B_N", real_T),
        ("Z_A_R_B_N", real_T)
    ]

class mom_A_R_B_Nm_Bus(ctypes.Structure):
    _fields_ = [
        ("L_A_R_B_Nm", real_T),
        ("M_A_R_B_Nm", real_T),
        ("N_A_R_B_Nm", real_T)
    ]

class for_mom_A_R_B_Bus(ctypes.Structure):
    _fields_ = [
        ("for_A_R_B_N", for_A_R_B_N_Bus),
        ("mom_A_R_B_Nm", mom_A_R_B_Nm_Bus)
    ]

class for_LDG_R_B_N_Bus(ctypes.Structure):
    _fields_ = [
        ("X_LDG_R_B_N", real_T),
        ("Y_LDG_R_B_N", real_T),
        ("Z_LDG_R_B_N", real_T)
    ]

class mom_LDG_R_B_Nm_Bus(ctypes.Structure):
    _fields_ = [
        ("L_LDG_R_B_Nm", real_T),
        ("M_LDG_R_B_Nm", real_T),
        ("N_LDG_R_B_Nm", real_T)
    ]

class for_mom_LDG_R_B_Bus(ctypes.Structure):
    _fields_ = [
        ("for_LDG_R_B_N", for_LDG_R_B_N_Bus),
        ("mom_LDG_R_B_Nm", mom_LDG_R_B_Nm_Bus)
    ]

class for_G_R_B_N_Bus(ctypes.Structure):
    _fields_ = [
        ("X_G_R_B_N", real_T),
        ("Y_G_R_B_N", real_T),
        ("Z_G_R_B_N", real_T)
    ]

class mom_G_R_B_Nm_Bus(ctypes.Structure):
    _fields_ = [
        ("L_G_R_B_Nm", real_T),
        ("M_G_R_B_Nm", real_T),
        ("N_G_R_B_Nm", real_T)
    ]

class for_mom_G_R_B_Bus(ctypes.Structure):
    _fields_ = [
        ("for_G_R_B_N", for_G_R_B_N_Bus),
        ("mom_G_R_B_Nm", mom_G_R_B_Nm_Bus)
    ]

class Weight_Balance_Bus(ctypes.Structure):
    _fields_ = [
        ("pos_RG_B_m", real_T * 3),
        ("m_kg", real_T),
        ("I_R_BB_kgm2", real_T * 9)
    ]

class Airframe_Outputs_Bus(ctypes.Structure):
    _fields_ = [
        ("for_mom_T_R_B", for_mom_T_R_B_Bus),
        ("Propulsion_Data_Out", Propulsion_Data_Out_Bus),
        ("for_mom_A_R_B", for_mom_A_R_B_Bus),
        ("for_mom_LDG_R_B", for_mom_LDG_R_B_Bus),
        ("for_mom_G_R_B", for_mom_G_R_B_Bus),
        ("Weight_Balance", Weight_Balance_Bus)
    ]

class Gravitation_Bus(ctypes.Structure):
    _fields_ = [
        ("acc_G_R_OO_O_mDs2", real_T * 3)
    ]

class Environment_Bus(ctypes.Structure):
    _fields_ = [
        ("Atmosphere", Atmosphere_Bus),
        ("Gravitation", Gravitation_Bus)
    ]

# Kinematik-Busse

class rot_K_EB_B_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_K_EB_B_radDs", real_T),
        ("w_y_K_EB_B_radDs", real_T),
        ("w_z_K_EB_B_radDs", real_T)
    ]

class rot_K_OB_B_radDs_Bus(ctypes.Structure):
    _fields_ = [
        ("w_x_K_OB_B_radDs", real_T),
        ("w_y_K_OB_B_radDs", real_T),
        ("w_z_K_OB_B_radDs", real_T)
    ]

class Kin_Trafo_Matrices_Bus(ctypes.Structure):
    _fields_ = [
        ("M_BO", real_T * 9),
        ("M_OB", real_T * 9),
        ("M_NO", real_T * 9),
        ("M_ON", real_T * 9)
    ]

class Kinematic_Data_Bus(ctypes.Structure):
    _fields_ = [
        ("rot_K_IB_B_radDs", rot_K_IB_B_radDs_Bus),
        ("vel_K_R_E_B_mDs", vel_K_R_E_B_mDs_Bus),
        ("rot_K_EB_B_radDs", rot_K_EB_B_radDs_Bus),
        ("rot_K_OB_B_radDs", rot_K_OB_B_radDs_Bus),
        ("Kin_Trafo_Matrices", Kin_Trafo_Matrices_Bus)
    ]

class vel_A_R_E_O_mDs_Bus(ctypes.Structure):
    _fields_ = [
        ("u_A_R_E_0_mDs", real_T),
        ("v_A_R_E_0_mDs", real_T),
        ("w_A_R_E_0_mDs", real_T)
    ]

class vel_A_R_E_B_mDs_Bus(ctypes.Structure):
    _fields_ = [
        ("u_A_R_E_B_mDs", real_T),
        ("v_A_R_E_B_mDs", real_T),
        ("w_A_R_E_B_mDs", real_T)
    ]

class Aero_Velocities_Bus(ctypes.Structure):
    _fields_ = [
        ("vel_A_R_E_0_mDs", vel_A_R_E_O_mDs_Bus),
        ("vel_A_R_E_B_mDs", vel_A_R_E_B_mDs_Bus)
    ]

class Translation_A_R_Bus(ctypes.Structure):
    _fields_ = [
        ("VEL_A_R_abs_mDs", real_T),
        ("alpha_A_R_rad", real_T),
        ("beta_A_R_rad", real_T)
    ]
